logs/trading212api.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/EasyProcess-0.2.3.egg-info'...
Listing './lib/python3.5/site-packages/PyVirtualDisplay-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/bs4-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/easyprocess'...
Listing './lib/python3.5/site-packages/easyprocess/examples'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyvirtualdisplay'...
Listing './lib/python3.5/site-packages/pyvirtualdisplay/examples'...
Listing './lib/python3.5/site-packages/selenium'...
Listing './lib/python3.5/site-packages/selenium/common'...
Listing './lib/python3.5/site-packages/selenium/webdriver'...
Listing './lib/python3.5/site-packages/selenium/webdriver/android'...
Listing './lib/python3.5/site-packages/selenium/webdriver/blackberry'...
Listing './lib/python3.5/site-packages/selenium/webdriver/chrome'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common/actions'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common/html5'...
Listing './lib/python3.5/site-packages/selenium/webdriver/edge'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox/amd64'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox/x86'...
Listing './lib/python3.5/site-packages/selenium/webdriver/ie'...
Listing './lib/python3.5/site-packages/selenium/webdriver/opera'...
Listing './lib/python3.5/site-packages/selenium/webdriver/phantomjs'...
Listing './lib/python3.5/site-packages/selenium/webdriver/remote'...
Listing './lib/python3.5/site-packages/selenium/webdriver/safari'...
Listing './lib/python3.5/site-packages/selenium/webdriver/support'...
Listing './lib/python3.5/site-packages/selenium/webdriver/webkitgtk'...
Listing './lib/python3.5/site-packages/selenium-3.8.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/splinter'...
Listing './lib/python3.5/site-packages/splinter/driver'...
Listing './lib/python3.5/site-packages/splinter/driver/webdriver'...
Listing './lib/python3.5/site-packages/splinter/request_handler'...
Listing './lib/python3.5/site-packages/splinter-0.7.7.egg-info'...
Listing './lib/python3.5/site-packages/trading212api-0.2rc2.dist-info'...
Listing './lib/python3.5/site-packages/tradingAPI'...
Compiling './lib/python3.5/site-packages/tradingAPI/api.py'...
***   File "./lib/python3.5/site-packages/tradingAPI/api.py", line 70
    mov_logger.info(f"added {mov.product} movement of {mov.quantity} " +
                                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tradingAPI/exceptions.py'...
***   File "./lib/python3.5/site-packages/tradingAPI/exceptions.py", line 11
    logger.error(f"Caught exception: {exc}")
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tradingAPI/logs'...
Compiling './lib/python3.5/site-packages/tradingAPI/low_level.py'...
***   File "./lib/python3.5/site-packages/tradingAPI/low_level.py", line 84
    logger.debug(f"browser {self.brow_name} launched")
                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yaml'...
Listing './selenium'...
Listing './selenium/webdriver'...
Listing './selenium/webdriver/firefox'...
Listing './selenium/webdriver/firefox/amd64'...
Listing './selenium/webdriver/firefox/x86'...
Listing './selenium/webdriver/remote'...
Listing './share'...
Listing './share/python-wheels'...
